bin_PROGRAMS = echogram
echogram_CFLAGS = $(gtk_CFLAGS) -lm
echogram_LDADD = $(gtk_LIBS)
echogram_VALAFLAGS = --pkg gtk+-3.0 --pkg glib-2.0 --pkg gio-2.0 --pkg gee-0.8
echogram_SOURCES = \
	channel.vala \
	container.vala \
	echogram.vala \
	frequency.vala \
	header.vala \
	index.vala \
	limit.vala \
	orientation.vala \
	ping.vala \
	sonarlog.vala \
	stuff.vala \
	view.vala
